--- a/src/client/style/app.less
+++ b/src/client/style/app.less
@@ -4,30 +4,6 @@
 @button-after:  darken(@link-color, 10%);
 @button-padding: 5px;
 @button-radius: 15px;
-h1 {
-  color: @green;
-}
 
-body {
-  text-align: center;
-  margin: auto;
-}
-button {
-  color: antiquewhite;
-  padding: @button-padding;
-  background-color: @link-color;
-  border-radius: @button-radius;
-  margin: 5px;
-  font-weight: 600;
-}
-
-button:hover{
-background-color: @button-after;
-}
-
-a, .link {
-  color: @link-color;
-}
-a:hover {
-  color: @link-color-hover;
-}
+@import './gradient.less';
+@import './info-card.less';
