--- a/src/client/style/app.less
+++ b/src/client/style/app.less
@@ -1,11 +1,16 @@
-@green: green;
-@link-color:        #b94eb4; // sea blue
-@link-color-hover:  lighten(@link-color, 30%);
-@button-after:  darken(@link-color, 10%);
-@button-padding: 5px;
-@button-radius: 15px;
-
+@primary-color: rgb(16, 0, 79);
+@background-color: rgb(39, 19, 121);
+@text-color: rgba(141, 128, 198, 1.0);
 
 @import './base.less';
+@import './navbar.less';
 @import './gradient.less';
 @import './info-card.less';
+
+@import '~rodal/lib/rodal.css';
+@import './modal.less';
+
+body {
+    margin: 0;
+    background-color: @background-color;
+}
