Implemented Base Modal

--- a/src/client/style/app.less
+++ b/src/client/style/app.less
@@ -6,6 +6,7 @@
 @import './navbar.less';
 @import './gradient.less';
 @import './info-card.less';
+@import './country-selector.less';
 
 @import '~rodal/lib/rodal.css';
 @import './modal.less';
