--- a/src/client/style/base.less
+++ b/src/client/style/base.less
@@ -1,6 +1,19 @@
 .app-container {
 }
 
+.text {
+    color: @text-color;
+}
+
+.country-flag {
+    display: inline;
+    img {
+        width: 2.5em;
+        height: auto;
+        border-radius: 15px;
+    }
+}
+
 .help-icon {
     position: absolute;
     bottom: 15px;
