Implemented Charts and Side Bar Lists

--- a/src/client/style/app.less
+++ b/src/client/style/app.less
@@ -2,6 +2,8 @@
 @background-color: rgb(39, 19, 121);
 @text-color: rgba(141, 128, 198, 1.0);
 
+@import './lib/bootstrap.min.css';
+
 @import './base.less';
 @import './navbar.less';
 @import './gradient.less';
