--- a/src/client/style/base.less
+++ b/src/client/style/base.less
@@ -1,8 +1,33 @@
 .app-container {
 }
 
+.covid-row {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.card {
+    background-color: @primary-color;
+    border: 1px solid @text-color;
+
+    .card-title {
+        color: @text-color;
+    }
+    .card-description {
+        color: white;
+        font-size: 0.75em;
+    }
+}
+
 .text {
     color: @text-color;
+    margin: 0;
+}
+
+.country-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .country-flag {
@@ -14,7 +39,14 @@
     }
 }
 
-.help-icon {
+.help-icon-topright {
+    position: absolute;
+    top: 15px;
+    right: 30px;
+    color: white;
+}
+
+.help-icon-bottomright {
     position: absolute;
     bottom: 15px;
     right: 30px;
