Linked API to Frontend

--- a/src/client/style/app.less
+++ b/src/client/style/app.less
@@ -9,6 +9,7 @@
 @import './gradient.less';
 @import './info-card.less';
 @import './country-selector.less';
+@import './chart.less';
 
 @import '~rodal/lib/rodal.css';
 @import './modal.less';
