--- a/src/client/style/modal.less
+++ b/src/client/style/modal.less
@@ -1,5 +1,7 @@
 .rodal-dialog {
     background-color: @background-color;
     color: @text-color;
+    width: 75% !important;
+    height: 75% !important;
 }
 
