--- a/src/client/style/base.less
+++ b/src/client/style/base.less
@@ -13,6 +13,7 @@
 .card {
     background-color: @primary-color;
     border: 1px solid @text-color;
+    border-radius: 15px;
 
     .card-title {
         color: @text-color;
