Added Loading Indicator

--- a/src/client/style/app.less
+++ b/src/client/style/app.less
@@ -18,3 +18,11 @@ body {
     margin: 0;
     background-color: @background-color;
 }
+::-webkit-scrollbar {
+    width: 0px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
