--- a/src/client/style/modal.less
+++ b/src/client/style/modal.less
@@ -1,7 +1,11 @@
 .rodal-dialog {
     background-color: @background-color;
     color: @text-color;
-    width: 75% !important;
-    height: 75% !important;
 }
 
+.loading-indicator {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
