Added UI for Top Trending Countries

--- a/src/client/style/country-selector.less
+++ b/src/client/style/country-selector.less
@@ -44,3 +44,25 @@
         margin-top: 0.25em;
     }
 }
+
+.country-row-min { 
+    margin-bottom: 5px;
+    .stat-body {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+    
+    .trend-down {
+        p, i {
+            color: green;
+        }
+        
+    }
+    
+    .trend-up {
+        p, i {
+            color: red;
+        }
+    }
+}
