--- a/src/client/style/base.less
+++ b/src/client/style/base.less
@@ -1,6 +1,11 @@
 .app-container {
 }
 
+.nopadding {
+    padding: 0;
+    margin: 0;
+}
+
 .centered {
     text-align: center;
 }
@@ -14,6 +19,7 @@
     background-color: @primary-color;
     border: 1px solid @text-color;
     border-radius: 15px;
+    margin-bottom: 15px;
 
     .card-title {
         color: @text-color;
