--- a/src/client/style/app.less
+++ b/src/client/style/app.less
@@ -2,6 +2,9 @@
 @background-color: rgb(39, 19, 121);
 @text-color: rgba(141, 128, 198, 1.0);
 
+@green: rgba(150, 230, 161, 1);
+@red: rgba(255, 154, 158, 1);
+
 @import './lib/bootstrap.min.css';
 
 @import './base.less';
