--- a/src/client/style/country-selector.less
+++ b/src/client/style/country-selector.less
@@ -55,14 +55,14 @@
     
     .trend-down {
         p, i {
-            color: green;
+            color: @green;
         }
         
     }
     
     .trend-up {
         p, i {
-            color: red;
+            color: @red;
         }
     }
 }
