--- a/src/client/style/gradient.less
+++ b/src/client/style/gradient.less
@@ -1,5 +1,5 @@
 .green-gradient {
-    background: linear-gradient(rgba(212, 252, 121, 1), rgba(150, 230, 161, 1))
+    background: linear-gradient(rgba(212, 252, 121, 1), @green)
 }
 
 .blue-gradient {
@@ -7,7 +7,7 @@
 }
 
 .red-gradient {
-    background: linear-gradient(rgba(255, 154, 158, 1), rgba(250, 208, 196, 1))
+    background: linear-gradient(@red, rgba(250, 208, 196, 1))
 }
 
 .purple-gradient {
