Cleaned Up Flipping Animation

--- a/src/client/style/info-card.less
+++ b/src/client/style/info-card.less
@@ -1,6 +1,6 @@
 .info-card {
     height: 10em;
-    margin: 0.5em;
+    padding: 0.5em;
     border-radius: 15px;
     display: flex;
     align-items: center;
