--- a/src/client/style/base.less
+++ b/src/client/style/base.less
@@ -30,6 +30,13 @@
     }
 }
 
+.card-wrapper {
+    height: 500px;
+}
+
+.mini-card-wrapper {
+}
+
 .text {
     color: @text-color;
     margin: 0;
