Added Help Text

--- a/src/client/style/info-card.less
+++ b/src/client/style/info-card.less
@@ -10,12 +10,20 @@
     }
 }
 
+.info-card-wrapper {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
 .info-box-content {
     color: white;
     font-size: 3em;
 }
 
 .info-box-description {
-    color: white;
+    color: white !important;
     font-size: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
