--- a/src/client/style/base.less
+++ b/src/client/style/base.less
@@ -97,3 +97,19 @@
   width: 50px;
   height: 50px;
 }
+
+.favorite {
+    color: white;
+}
+
+.favorite:hover {
+    color: yellow;
+}
+
+.favorite-selected {
+    color: yellow;
+}
+
+.favorite-selected:hover {
+    color: white;
+}
