--- a/src/client/style/country-selector.less
+++ b/src/client/style/country-selector.less
@@ -20,8 +20,13 @@
 
 .country-list {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: row;
+    .country {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .rodal-dialog {
@@ -32,16 +37,17 @@
         display: none;
     }
     .country-row {
-        justify-content: flex-start;
+        justify-content: space-between;
         cursor: pointer;
-
-        .text:hover {
-            color: white;
-        }
     }
     .country-flag {
         margin-right: 15px;
         margin-top: 0.25em;
+    }
+    .country-row:hover {
+        .text {
+            color: white;
+        }
     }
 }
 
@@ -67,7 +73,7 @@
     }
 }
 
-.country-row-min .text:hover {
+.country-row-min:hover {
     color: white;
     cursor: pointer;
 }
