--- a/src/client/style/country-selector.less
+++ b/src/client/style/country-selector.less
@@ -28,12 +28,17 @@
     .country-row {
         justify-content: space-between;
         cursor: pointer;
+        margin-bottom: 15px;
         
         .country {
             display: flex;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
             justify-content: center;
             align-items: center;
+        }
+
+        div svg {
+            font-size: 24px;
         }
     }
     .country-flag {
