--- a/src/client/style/chart.less
+++ b/src/client/style/chart.less
@@ -1,3 +1,31 @@
 .tooltip-wrapper {
     background-color: white !important;
 }
+
+.legend-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    p {
+        margin-left: 15px;
+        margin-right: 15px;
+        text-align: center;    
+    }
+    
+    .green {
+        color: green;
+    }
+
+    .blue {
+        color: rgba(55, 81, 255, 1);
+    }
+
+    .white {
+        color: white;
+    }
+}
+
+.recharts-text tspan {
+    fill: @text-color;
+}
