--- a/src/client/style/base.less
+++ b/src/client/style/base.less
@@ -6,8 +6,25 @@
   margin: 0;
 }
 
+.image {
+  width: 100%;
+  height: 100%;
+}
+
+.rounded {
+  border-radius: 100px;
+}
+
 .centered {
   text-align: center;
+}
+
+.headline {
+  margin-bottom: 30px;
+}
+
+.white {
+  color: white;
 }
 
 .covid-row {
@@ -114,4 +131,22 @@
 
 .favorite-selected:hover {
   color: white;
+}
+
+.social-media {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+
+  a {
+    color: white;
+    font-size: 36px;
+    margin: 15px;
+  }
+
+  a:hover {
+    color: @text-color;
+    cursor: pointer;
+  }
 }
