Implemented Paulti and Evans Changes

--- a/src/client/style/base.less
+++ b/src/client/style/base.less
@@ -9,6 +9,7 @@
 .image {
   width: 100%;
   height: 100%;
+  padding-bottom: 15px;
 }
 
 .rounded {
@@ -24,7 +25,7 @@
 }
 
 .white {
-  color: white;
+  color: white !important;
 }
 
 .covid-row {
@@ -73,6 +74,10 @@
 .text {
   color: @text-color;
   margin: 0;
+}
+
+.world-figures {
+  margin: 30px;
 }
 
 .country-row {
@@ -149,4 +154,9 @@
     color: @text-color;
     cursor: pointer;
   }
+}
+
+.trending-headline {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
