Added Trend to Data Cards

--- a/src/client/style/base.less
+++ b/src/client/style/base.less
@@ -160,3 +160,11 @@
   margin-top: 15px;
   margin-bottom: 15px;
 }
+
+.green {
+  color: #96e6a1 !important;
+}
+
+.red {
+  color: #ff9a9e !important;
+}
