--- a/src/client/style/info-card.less
+++ b/src/client/style/info-card.less
@@ -1,29 +1,41 @@
 .info-card {
-    height: 10em;
-    padding: 0.5em;
-    border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    div {
-        text-align: center;
+  height: 10em;
+  padding: 0.5em;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  div {
+    text-align: center;
+  }
+
+  .info-card-subtext {
+    p {
+      margin: 0;
+      font-size: 12px;
     }
+    span {
+      margin-left: 2px;
+      margin-right: 2px;
+      color: white;
+    }
+  }
 }
 
 .info-card-wrapper {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .info-box-content {
-    color: white;
-    font-size: 3em;
+  color: white;
+  font-size: 3em;
 }
 
 .info-box-description {
-    color: white !important;
-    font-size: 1em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  color: white !important;
+  font-size: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
